# zylora-cli

./: Cargo.toml
.github/workflows/: cli-release.yml
src/: client.rs  config.rs  error.rs  main.rs  output.rs  style.rs
src/commands/: auth.rs  billing.rs  deploy.rs  deployments.rs  functions.rs  init.rs  invoke.rs  metrics.rs  mod.rs  models.rs  secrets.rs
