[package]
name = "zy-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Zylora GPU platform CLI"
repository = "https://github.com/zylora-dev/zylora-cli"
readme = "README.md"

[[bin]]
name = "zy"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
console = "0.16.3"
dialoguer = "0.12.0"
dirs = "6.0.0"
futures-util = "0.3.32"
indicatif = "0.18.4"
open = "5.3.3"
reqwest = { version = "0.13.2", features = ["json", "stream", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.11.0"
tabled = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.18"
tokio = { version = "1.51.1", features = ["full"] }
toml = "1.1.2"
uuid = { version = "1.23.0", features = ["v7", "serde"] }
